--- a/_data/site-settings.yml
+++ b/_data/site-settings.yml
@@ -17,7 +17,7 @@ design:
   light-text_color: '#f7f5f3'
   featured-text_color: '#ff0000'
   dark_color: '#3c3c41'
-  medium_color: '#ede8e4'
+  medium_color: '#98A9B7'
   light_color: '#F4F1E8'
   v-light_color: '#f9f9f9'
   featured_color: '#6495ed'
