--- a/_data/site-settings.yml
+++ b/_data/site-settings.yml
@@ -1,6 +1,6 @@
 seo:
-  site_name: Example
-  title: Example SEO Title
+  site_name: Sun Moon Yoga Studio
+  title: Sun Moon Yoga Studio
   description:
   keywords:
   social_image:
