--- a/_data/site-settings.yml
+++ b/_data/site-settings.yml
@@ -1,9 +1,9 @@
 seo:
-  site_name: Sun Moon Yoga Studio
-  title: Sun Moon Yoga Studio
-  description:
-  keywords:
-  social_image:
+  site_name: Hatha Vinyasa Yoga in Schwyz – Sun Moon Yoga Studio
+  title: Hatha Vinyasa Yoga in Schwyz – Sun Moon Yoga Studio
+  description: Entdecke Hatha Vinyasa Yoga mit Juliana in Schwyz – online oder vor Ort. Sanfte Flows, bewusste Atmung und tiefe Entspannung. Jetzt Yogastunde ab CHF 15 buchen.
+  social_image: /images/sunmoonyogastudio-header-banner.jpg
+  keywords: Hatha Yoga Schwyz, Vinyasa Yoga Schwyz, Yoga Schwyz, Yoga Online Schweiz, Yoga Stunden Schwyz, Yoga Kurse Schwyz, Sun Moon Yoga 
   author:
   favicon_image:
 social:
